assets/css/main.css
/* ... */
/* Touch */

	body.is-touch .image.thumb:before {
		opacity: 0.5 !important;
	}

	body.is-touch .image.thumb:after {
		display: none !important;
	}

	body.is-touch #header {
		background-attachment: scroll;
		background-size: auto, cover;
	}

	body.is-touch .poptrox-popup .nav-next,
	body.is-touch .poptrox-popup .nav-previous,
	body.is-touch .poptrox-popup .closer {
		opacity: 1.0 !important;
	}

/* XLarge */

	@media screen and (max-width: 1800px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 12pt;
			}

	}

/* Large */

	@media screen and (max-width: 1280px) {

		/* Header */

			#header {
				padding: 6em 2% 3em 2%;
				width: 22%;
			}

				#header h1 {
					font-size: 1.25em;
				}

					#header h1 br {
						display: none;
					}

				#header > .inner {
					margin-bottom: 0;
				}

		/* Footer */

			#footer .copyright li {
				border-left-width: 0;
				display: block;
				line-height: 2.25em;
				margin-left: 0;
				padding-left: 0;
			}

		/* Main */

			#main {
				margin-left: 22%;
				max-width: none;
				padding: 6em 2% 3em 2%;
				width: calc(100% - 22%);
			}

	}

/* Medium */

	@media screen and (max-width: 980px) {

		/* Basic */

			h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
				display: none;
			}

		/* List */

			ul.icons li .icon {
				font-size: 1.25em;
			}

		/* Header */

			#header {
				/* Usamos la montaña cuadrada para móvil */
				background-image: url("images/overlay.png"), url("../../images/Mon2.png");
				background-attachment: scroll;
				background-position: top left, center center;
				background-size: auto,		cover;
				left: auto;
				padding: 2em 4em;
				position: relative;
				text-align: center;
				top: auto;
				width: 100%;
				display: block;
			}
				#header .icons {
					margin: 3em 0 1em 0;
				}

				#header h1 {
					font-size: 1.75em;
				}

					#header h1 br {
						display: inline;
					}
		
		/* header:before */			
		#header::before {
            background-image: 
        linear-gradient(rgba(0,0,0,0.30), rgba(0,0,0,0.30)),
        url("../../images/Mon2.png");
        background-position: center center;
    	}				
		/* Footer */

			#footer {
				background-attachment: scroll;
				background-color: #1f1815;
				/* background-image: url("images/overlay.png"), url("../../images/Mon.png"); */
				background-image: none;
        		background: linear-gradient(to bottom, #1f1815, #0d0b0a);
				background-position: top left,						bottom center;
				background-repeat: repeat,							no-repeat;
				background-size: auto,							cover;
				bottom: auto;
				left: auto;
				padding: 4em 4em 6em 4em;
				position: relative;
				text-align: center;
				width: 100%;
			}

				#footer .icons {
					margin: 0 0 1em 0;
				}

				#footer .copyright {
					margin: 0 0 1em 0;
				}

					#footer .copyright li {
						border-left-width: 1px;
						display: inline-block;
						line-height: 1em;
						margin-left: 0.75em;
						padding-left: 0.75em;
					}

		/* Main */

			#main {
				margin: 0;
				padding: 3em 2%;
				width: 100%;
			}

	}

/* Small */

	@media screen and (max-width: 736px) {

		/* Basic */

			h1 {
				font-size: 1.5em;
			}

			h2 {
				font-size: 1.2em;
			}

			h3 {
				font-size: 1em;
			}
			p {
				/* Para que no se pegue a los títulos*/
				margin: 0em 0 0 0;
			}

		/* Section/Article */

			section.special, article.special {
				text-align: center;
			}

			header.major h2 {
				font-size: 1.35em;
			}

		/* List */

			ul.labeled-icons li {
				padding-left: 2em;
			}

				ul.labeled-icons li h3 {
					line-height: 1.75em;
				}

		/* Header */		
			#header {
				padding: 2.25em 1.5em;
			}

				#header h1 {
					font-size: 1.35em;
				}
			
			

		/* Footer */

			#footer {
				padding: 2.25em 1.5em;
			}

		/* Main */

			#main {
				padding: 2.25em 2% 2.25em 2%;
			}

				#main > section {
					margin: 0 0 0 0;
					padding: 2.25em 2%;
				}

				#main > section:first-child {
					border-top: 0;
					margin-top: -0em;
					padding-top: 0;
				}

		/* Poptrox */

			.poptrox-popup {
				border-radius: 0;
			}

				.poptrox-popup .nav-next:before,
				.poptrox-popup .nav-previous:before {
					margin-top: -1em;
				}

	}

/* XSmall */

	@media screen and (max-width: 480px) {

		/* Header */

			#header {
				padding: 2.25em 1.5em;
			}

				#header h1 br {
					display: none;
				}

		/* Footer */

			#footer .copyright li {
				border-left-width: 0;
				display: block;
				line-height: 2.25em;
				margin-left: 0;
				padding-left: 0;
			}

	}

/* ===================== DARK MODE ===================== */

body {
    transition: background 0.3s ease, color 0.3s ease;
}

#main {
    transition: background 0.3s ease, color 0.3s ease;
}

body.dark-mode {
	/* Teal grey */
    /* background: #16201E; */
	background: #1E2329;
    color: #c0c0c0;
}

body.dark-mode #main {
	/* Teal grey */
    /* background: #16201E; */
	background: #1E2329;
}

body.dark-mode h1,
body.dark-mode h2,
body.dark-mode h3,
body.dark-mode h4,
body.dark-mode h5,
body.dark-mode h6 {
    color: #d0d0d0;
}

body.dark-mode strong,
body.dark-mode b {
    color: #e0e0e0;
}

body.dark-mode hr,
body.dark-mode #main > section {
    border-color: #333;
}

body.dark-mode ul.alt li {
    border-color: #333;
}

body.dark-mode table tbody tr {
    border-color: #333;
}

body.dark-mode table tbody tr:nth-child(2n + 1) {
    background-color: #252535;
}

body.dark-mode table thead {
    border-color: #333;
}

body.dark-mode code {
    background: #252535;
    border-color: #333;
}

body.dark-mode p {
    color: #c0c0c0;
}

body.dark-mode ul li {
    color: #c0c0c0;
}
/* ... */

